<resources>
    <string name="app_name">Dziennik elektroniczny</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="error_incorrect_password">Podane hasło jest nieprawidłowe</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="action_check_box">Zapamiętaj mnie</string>
    <string name="account_does_not_exist">Użytkownik o podanej nazwie nie istnieje</string>
    <string name="error_no_connection">Brak połaczenia z internetem</string>
    <string name="error_connection_not_available">Serwer nie odpowiada</string>
    <string name="error_while_download_data">Błąd podczas pobierania danych</string>
    <string name="error_while_sending_data">Błąd podczas wysyłania danych</string>
    <string name="success">Wykonano pomyślnie</string>
    <string name="error_unlisted">Wystąpił nieoczekiwany błąd</string>
    <string name="grades">Oceny</string>
    <string name="guardian">Wychowawca</string>
    <string name="info">Informacje</string>
    <string name="logout">Wyloguj</string>
    <string name="password">Hasło</string>
    <string name="phone">Telefon</string>
    <string name="mail">E-mail</string>
    <string name="address">Adres</string>
    <string name="pupils">Podopieczni</string>
    <string name="surname">Nazwisko</string>
    <string name="name">Imię</string>
    <string name="old_password">Stare hasło</string>
    <string name="action_confirm">Zatwierdź</string>
    <string name="new_password">Nowe hasło</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="old_number">Stary numer</string>
    <string name="new_number">Nowy numer</string>
    <string name="old_mail">Stary e-mail</string>
    <string name="new_mail">Nowy e-mail</string>
    <string name="street">Ulica</string>
    <string name="house_number">Numer budynku</string>
    <string name="flat_number">Numer mieszkania</string>
    <string name="postal_code">Kod pocztowy</string>
    <string name="city">Miejscowość</string>
    <string name="country">Państwo</string>
    <string name="error_unacceptable_signin">Aplikacja tylko dla uczniów i opiekunów</string>
    <string name="application_logo">Application logo</string>
    <string name="sign_in_as">Zalogowano jako </string>
</resources>